--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "memory-card",
   "version": "0.1.0",
-  "homepage": "https://github.com/mrwindupbirdesq/memory-card/",
+  "homepage": "https://github.com/maahsnd/memory-card/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -9,13 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "predeploy": "npm run build --openssl-legacy-provider start",
+    "deploy": "gh-pages -d build --openssl-legacy-provider start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
